--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ copyright: Copyright &copy; 2022 Yevhen D.
 # Configuration
 theme:
   name: material
+  custom_dir: material/.overrides
   features:
     - content.code.annotate
     - content.tooltips
